@@ -5,10 +5,12 @@
 ## License: ZPL (http://www.zope.org/Resources/ZPL)
 ##
 __doc__='''A little function that puts HTML links into text.'''
-__version__='0.9.3'
+__version__='0.9.4'
 
 
 __changes__ = '''
+0.9.4         Made improveURL a publically available function.
+
 0.9.3         Fixed a bug when text contains "m." but wasnt followed but a a-z.
 
 0.9.2         Added supports for URLs starting with m., mobile. and www2.
@@ -64,7 +66,7 @@ def _massageURL(url):
   
     return url
 
-def _improveURL(url):
+def improveURL(url):
     # ok_middle_name_starts looks something like this:
     #  ('ftp','http','www.','mobile.','m.','www2.')
     # If our url here starts with any of those that end in a .
@@ -76,10 +78,10 @@ def _improveURL(url):
 
 
 def _makeLink(url):
-    return '<a href="%s">%s</a>'%(_improveURL(url), url)
+    return '<a href="%s">%s</a>'%(improveURL(url), url)
 
 def _makeMailLink(url):
-    return '<a href="mailto:%s">%s</a>'%(_improveURL(url), url)
+    return '<a href="mailto:%s">%s</a>'%(improveURL(url), url)
 
 def _rejectEmail(email, start):
     if email.startswith("mailto:"):
